--- a/index.html
+++ b/index.html
@@ -5,83 +5,84 @@
   <!-- Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BYX Island Party 2023</title>
+  <title>BYX Island Party 2023 | Unforgettable Music Experience</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Bootstrap CSS (Optional for advanced components) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- AOS Animation CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
 <body>
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="spinner"></div>
+  </div>
+
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <nav class="navbar">
     <div class="container">
       <a class="navbar-brand" href="#">BYX Island Party</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#lineup">Lineup</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#sponsors">Sponsors</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#botb">Battle of the Bands</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#fundraising">Fundraising</a>
-          </li>
-        </ul>
+      <div class="navbar-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
+        <li class="nav-item"><a href="#lineup" class="nav-link">Lineup</a></li>
+        <li class="nav-item"><a href="#sponsors" class="nav-link">Sponsors</a></li>
+        <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="#botb" class="nav-link">Battle of the Bands</a></li>
+        <li class="nav-item"><a href="#fundraising" class="nav-link">Fundraising</a></li>
+        <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+      </ul>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <header class="hero-section">
+  <section id="home" class="hero-section">
+    <video autoplay muted loop id="hero-video">
+      <source src="videos/hero-video.mp4" type="video/mp4">
+    </video>
     <div class="overlay"></div>
-    <div class="hero-content text-center">
-      <h1>BYX Island Party 2023</h1>
-      <p>Join us for a night of music, fun, and community!</p>
-      <a href="#" class="btn btn-primary m-2">Buy Tickets</a>
-      <a href="#fundraising" class="btn btn-secondary m-2">Donate Now</a>
+    <div class="hero-content">
+      <h1 data-aos="fade-up">BYX Island Party 2023</h1>
+      <p data-aos="fade-up" data-aos-delay="100">Unforgettable Music Experience</p>
+      <a href="#" class="btn btn-primary m-2" data-aos="zoom-in" data-aos-delay="200">Buy Tickets</a>
+      <a href="#fundraising" class="btn btn-secondary m-2" data-aos="zoom-in" data-aos-delay="300">Donate Now</a>
     </div>
-  </header>
+    <a href="#about" class="scroll-down"><i class="fas fa-angle-down"></i></a>
+  </section>
 
   <!-- About Section -->
   <section id="about" class="section-padding">
     <div class="container">
-      <h2 class="section-title">About BYX Island Party</h2>
-      <p class="section-subtitle">An annual music festival hosted by Beta Upsilon Chi to bring people together and support charitable causes.</p>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Our Mission</h3>
-          <p>BYX Island Party aims to create an unforgettable experience that not only entertains but also makes a positive impact on our community by supporting local and national charities.</p>
+      <h2 class="section-title" data-aos="fade-up">About BYX Island Party</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">An annual music festival hosted by Beta Upsilon Chi, bringing people together to support charitable causes.</p>
+      <div class="about-grid">
+        <div class="about-image" data-aos="fade-right" data-aos-delay="200">
+          <img src="images/about.jpg" alt="About BYX Island Party">
         </div>
-        <div class="col-md-6">
+        <div class="about-text" data-aos="fade-left" data-aos-delay="200">
+          <h3>Our Mission</h3>
+          <p>We aim to create an unforgettable experience that entertains and positively impacts our community by supporting local and national charities.</p>
           <h3>Event Highlights</h3>
           <ul>
             <li>Live performances by top artists</li>
-            <li>Food trucks and vendors</li>
-            <li>Interactive games and activities</li>
-            <li>Opportunities to connect and network</li>
+            <li>Gourmet food trucks and artisan vendors</li>
+            <li>Interactive art installations and activities</li>
+            <li>Networking lounges and VIP experiences</li>
           </ul>
         </div>
       </div>
@@ -91,35 +92,30 @@
   <!-- Lineup Section -->
   <section id="lineup" class="section-padding bg-light">
     <div class="container">
-      <h2 class="section-title">2023 Lineup</h2>
-      <p class="section-subtitle">Get ready for an amazing lineup of artists!</p>
-      <div class="row">
+      <h2 class="section-title" data-aos="fade-up">2023 Lineup</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Prepare for an incredible lineup of artists!</p>
+      <div class="artist-carousel owl-carousel">
         <!-- Artist Card -->
-        <div class="col-md-4">
-          <div class="artist-card">
-            <img src="images/artist1.jpg" alt="Headliner Artist">
-            <h4>Headliner Artist</h4>
-            <p>A brief description of the headliner artist.</p>
-          </div>
+        <div class="artist-card" data-aos="zoom-in" data-aos-delay="200">
+          <img src="images/artist1.jpg" alt="Saint Motel">
+          <h4>Saint Motel</h4>
+          <p>Headlining indie pop band known for energetic performances.</p>
         </div>
         <!-- Artist Card -->
-        <div class="col-md-4">
-          <div class="artist-card">
-            <img src="images/artist2.jpg" alt="Supporting Artist">
-            <h4>Supporting Artist</h4>
-            <p>A brief description of the supporting artist.</p>
-          </div>
+        <div class="artist-card" data-aos="zoom-in" data-aos-delay="300">
+          <img src="images/artist2.jpg" alt="The Lumineers">
+          <h4>The Lumineers</h4>
+          <p>Folk-rock sensations bringing soulful melodies to the stage.</p>
         </div>
         <!-- Artist Card -->
-        <div class="col-md-4">
-          <div class="artist-card">
-            <img src="images/artist3.jpg" alt="Opening Act">
-            <h4>Opening Act</h4>
-            <p>A brief description of the opening act.</p>
-          </div>
+        <div class="artist-card" data-aos="zoom-in" data-aos-delay="400">
+          <img src="images/artist3.jpg" alt="Imagine Dragons">
+          <h4>Imagine Dragons</h4>
+          <p>Grammy-winning band kicking off the event with a bang.</p>
         </div>
+        <!-- Additional Artist Cards -->
       </div>
-      <div class="text-center mt-4">
+      <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="500">
         <a href="#botb" class="btn btn-outline-primary">See Battle of the Bands Winner</a>
       </div>
     </div>
@@ -128,15 +124,17 @@
   <!-- Sponsors Section -->
   <section id="sponsors" class="section-padding">
     <div class="container">
-      <h2 class="section-title">Our Sponsors</h2>
-      <p class="section-subtitle">We thank our generous sponsors for making this event possible.</p>
-      <div class="sponsors-grid">
-        <img src="images/sponsor1.jpg" alt="Sponsor 1">
-        <img src="images/sponsor2.svg" alt="Sponsor 2">
-        <img src="images/sponsor3.jpg" alt="Sponsor 3">
-        <img src="images/sponsor4.svg" alt="Sponsor 4">
+      <h2 class="section-title" data-aos="fade-up">Our Sponsors</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">We thank our generous sponsors for making this event possible.</p>
+      <div class="sponsors-logos" data-aos="fade-up" data-aos-delay="200">
+        <img src="images/sponsor1.png" alt="Sponsor 1">
+        <img src="images/sponsor2.png" alt="Sponsor 2">
+        <img src="images/sponsor3.png" alt="Sponsor 3">
+        <img src="images/sponsor4.png" alt="Sponsor 4">
+        <img src="images/sponsor5.png" alt="Sponsor 5">
+        <img src="images/sponsor6.png" alt="Sponsor 6">
       </div>
-      <div class="text-center mt-4">
+      <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="300">
         <a href="#fundraising" class="btn btn-primary">Become a Sponsor</a>
       </div>
     </div>
@@ -145,27 +143,22 @@
   <!-- Fundraising Section -->
   <section id="fundraising" class="section-padding bg-light">
     <div class="container">
-      <h2 class="section-title">Support Our Cause</h2>
-      <p class="section-subtitle">Your contributions make a significant impact on our mission.</p>
-      <div class="row">
-        <div class="col-md-6">
+      <h2 class="section-title" data-aos="fade-up">Support Our Cause</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Your contributions make a significant impact.</p>
+      <div class="fundraising-grid">
+        <div class="fundraising-text" data-aos="fade-right" data-aos-delay="200">
           <h3>Why Donate?</h3>
           <p>Your donations help us:</p>
           <ul>
-            <li>Host a memorable event for the community</li>
+            <li>Host a memorable community event</li>
             <li>Support local and national charities</li>
             <li>Provide opportunities for emerging artists</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <h3>How to Donate</h3>
-          <p>You can contribute through:</p>
-          <ul>
-            <li>Online donations via our secure portal</li>
-            <li>Sponsorship packages for businesses</li>
-            <li>In-kind donations and services</li>
+            <li>Enhance community engagement</li>
           </ul>
           <a href="#" class="btn btn-primary">Donate Now</a>
+        </div>
+        <div class="fundraising-image" data-aos="fade-left" data-aos-delay="200">
+          <img src="images/fundraising.jpg" alt="Support Our Cause">
         </div>
       </div>
     </div>
@@ -174,19 +167,19 @@
   <!-- Battle of the Bands Section -->
   <section id="botb" class="section-padding">
     <div class="container">
-      <h2 class="section-title">Battle of the Bands</h2>
-      <p class="section-subtitle">Discover new talent competing for a spot in our lineup.</p>
-      <div class="row">
-        <div class="col-md-6">
+      <h2 class="section-title" data-aos="fade-up">Battle of the Bands</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Discover new talent competing for a spot in our lineup.</p>
+      <div class="botb-grid">
+        <div class="botb-details" data-aos="fade-right" data-aos-delay="200">
           <h3>Event Details</h3>
           <p><i class="fa fa-calendar-alt"></i> Date: <strong>March 15, 2023</strong></p>
           <p><i class="fa fa-map-marker-alt"></i> Location: <strong>Downtown Venue</strong></p>
           <p><i class="fa fa-clock"></i> Time: <strong>6:00 PM - 10:00 PM</strong></p>
           <a href="#" class="btn btn-secondary">Learn More</a>
         </div>
-        <div class="col-md-6">
+        <div class="botb-winner" data-aos="fade-left" data-aos-delay="200">
           <h3>Last Year's Winner</h3>
-          <img src="images/botb-winner.jpg" alt="Battle of the Bands Winner" class="img-fluid">
+          <img src="images/botb-winner.webp" alt="Battle of the Bands Winner">
           <p class="mt-2"><strong>The Rising Stars</strong></p>
         </div>
       </div>
@@ -196,32 +189,35 @@
   <!-- Contact Section -->
   <section id="contact" class="section-padding bg-primary text-white">
     <div class="container">
-      <h2 class="section-title">Get in Touch</h2>
-      <p class="section-subtitle">We'd love to hear from you!</p>
-      <div class="row">
-        <div class="col-md-6">
+      <h2 class="section-title" data-aos="fade-up">Get in Touch</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">We'd love to hear from you!</p>
+      <div class="contact-grid">
+        <div class="contact-info" data-aos="fade-right" data-aos-delay="200">
           <h3>Contact Information</h3>
           <p><i class="fa fa-envelope"></i> Email: <a href="mailto:info@byxislandparty.com" class="text-white">info@byxislandparty.com</a></p>
           <p><i class="fa fa-phone"></i> Phone: <a href="tel:+1234567890" class="text-white">+1 (234) 567-890</a></p>
           <p>Follow us on social media:</p>
-          <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+          <div class="social-icons">
+            <a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-youtube"></i></a>
+          </div>
         </div>
-        <div class="col-md-6">
+        <div class="contact-form" data-aos="fade-left" data-aos-delay="200">
           <h3>Send Us a Message</h3>
           <form id="contactForm">
-            <div class="mb-3">
-              <label for="contactName" class="form-label">Name</label>
-              <input type="text" class="form-control" id="contactName" required>
+            <div class="form-group">
+              <input type="text" id="contactName" required>
+              <label for="contactName">Name</label>
             </div>
-            <div class="mb-3">
-              <label for="contactEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="contactEmail" required>
+            <div class="form-group">
+              <input type="email" id="contactEmail" required>
+              <label for="contactEmail">Email</label>
             </div>
-            <div class="mb-3">
-              <label for="contactMessage" class="form-label">Message</label>
-              <textarea class="form-control" id="contactMessage" rows="4" required></textarea>
+            <div class="form-group">
+              <textarea id="contactMessage" rows="4" required></textarea>
+              <label for="contactMessage">Message</label>
             </div>
             <button type="submit" class="btn btn-light">Submit</button>
           </form>
@@ -231,37 +227,41 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer bg-dark text-white">
+  <footer class="footer">
     <div class="container">
-      <div class="row">
+      <div class="footer-grid">
         <!-- About -->
-        <div class="col-md-4">
+        <div class="footer-about">
           <h5>About BYX Island Party</h5>
           <p>BYX Island Party is an annual music festival hosted by Beta Upsilon Chi, dedicated to fostering community and supporting charitable causes.</p>
         </div>
         <!-- Quick Links -->
-        <div class="col-md-4">
+        <div class="footer-links">
           <h5>Quick Links</h5>
-          <ul class="footer-links">
+          <ul>
             <li><a href="#lineup">Lineup</a></li>
             <li><a href="#sponsors">Sponsors</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#botb">Battle of the Bands</a></li>
             <li><a href="#fundraising">Fundraising</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
         <!-- Contact -->
-        <div class="col-md-4">
+        <div class="footer-contact">
           <h5>Contact Us</h5>
           <p><i class="fa fa-envelope"></i> <a href="mailto:info@byxislandparty.com">info@byxislandparty.com</a></p>
           <p><i class="fa fa-phone"></i> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
           <p>Follow us:</p>
-          <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+          <div class="social-icons">
+            <a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-youtube"></i></a>
+          </div>
         </div>
       </div>
-      <div class="text-center mt-4">
+      <div class="footer-bottom">
         <p>&copy; 2023 BYX Island Party. All rights reserved.</p>
       </div>
     </div>
@@ -270,8 +270,38 @@
   <!-- External JavaScript -->
   <script src="scripts.js"></script>
 
-  <!-- Bootstrap JS (Optional for advanced components) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- AOS Animation JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
+  <!-- Initialize AOS -->
+  <script>
+    AOS.init({
+      once: true,
+      duration: 800,
+      offset: 100,
+    });
+  </script>
+
+  <!-- Owl Carousel JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+  <!-- Initialize Owl Carousel -->
+  <script>
+    $('.artist-carousel').owlCarousel({
+      loop: true,
+      margin: 30,
+      nav: true,
+      navText: ['<i class="fas fa-chevron-left"></i>', '<i class="fas fa-chevron-right"></i>'],
+      dots: false,
+      autoplay: true,
+      autoplayTimeout: 5000,
+      responsive: {
+        0: { items: 1 },
+        768: { items: 2 },
+        992: { items: 3 }
+      }
+    });
+  </script>
 </body>
 
 </html>
