--- a/index.html
+++ b/index.html
@@ -134,7 +134,43 @@
             <p>Headlining indie pop band known for energetic performances.</p>
           </div>
         </div>
-        <!-- Repeat Artist Cards as needed -->
+        <div class="artist-card" data-aos="zoom-in" data-aos-delay="200">
+          <div class="artist-image">
+            <img src="images/artist1.jpg" alt="Saint Motel">
+            <div class="overlay">
+              <a href="#" class="play-btn"><i class="fas fa-play"></i></a>
+            </div>
+          </div>
+          <div class="artist-info">
+            <h4>Saint Motel</h4>
+            <p>Headlining indie pop band known for energetic performances.</p>
+          </div>
+        </div>
+        <div class="artist-card" data-aos="zoom-in" data-aos-delay="200">
+          <div class="artist-image">
+            <img src="images/artist1.jpg" alt="Saint Motel">
+            <div class="overlay">
+              <a href="#" class="play-btn"><i class="fas fa-play"></i></a>
+            </div>
+          </div>
+          <div class="artist-info">
+            <h4>Saint Motel</h4>
+            <p>Headlining indie pop band known for energetic performances.</p>
+          </div>
+        </div>
+        <div class="artist-card" data-aos="zoom-in" data-aos-delay="200">
+          <div class="artist-image">
+            <img src="images/artist1.jpg" alt="Saint Motel">
+            <div class="overlay">
+              <a href="#" class="play-btn"><i class="fas fa-play"></i></a>
+            </div>
+          </div>
+          <div class="artist-info">
+            <h4>Saint Motel</h4>
+            <p>Headlining indie pop band known for energetic performances.</p>
+          </div>
+        </div>
+        
       </div>
       <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="500">
         <a href="#botb" class="btn btn-outline-light">See Battle of the Bands Winner</a>
@@ -151,7 +187,10 @@
       </div>
       <div class="sponsors-logos" data-aos="fade-up" data-aos-delay="200">
         <!-- Sponsor Logos -->
-        <div class="sponsor-logo"><img src="images/sponsor1.png" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsor1.jpg" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsor2.svg" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsor3.jpg" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsor4.svg" alt="Sponsor 1"></div>
         <!-- Repeat Sponsor Logos as needed -->
       </div>
       <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="300">
