--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
       <h2 class="section-title" data-aos="fade-up">Our Sponsors</h2>
       <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">We thank our generous sponsors for making this event possible.</p>
       <div class="sponsors-logos" data-aos="fade-up" data-aos-delay="200">
-        <img src="images/sponsor1.png" alt="Sponsor 1">
-        <img src="images/sponsor2.png" alt="Sponsor 2">
-        <img src="images/sponsor3.png" alt="Sponsor 3">
-        <img src="images/sponsor4.png" alt="Sponsor 4">
+        <img src="images/sponsor1.jpg" alt="Sponsor 1">
+        <img src="images/sponsor2.svg" alt="Sponsor 2">
+        <img src="images/sponsor3.jpg" alt="Sponsor 3">
+        <img src="images/sponsor4.svg" alt="Sponsor 4">
         <img src="images/sponsor5.png" alt="Sponsor 5">
         <img src="images/sponsor6.png" alt="Sponsor 6">
       </div>
@@ -173,13 +173,13 @@
         <div class="botb-details" data-aos="fade-right" data-aos-delay="200">
           <h3>Event Details</h3>
           <p><i class="fa fa-calendar-alt"></i> Date: <strong>March 15, 2023</strong></p>
-          <p><i class="fa fa-map-marker-alt"></i> Location: <strong>Downtown Venue</strong></p>
+          <p><i class="fa fa-map-marker-alt"></i> Location: <strong>Wolf Pen Amphitheater</strong></p>
           <p><i class="fa fa-clock"></i> Time: <strong>6:00 PM - 10:00 PM</strong></p>
           <a href="#" class="btn btn-secondary">Learn More</a>
         </div>
         <div class="botb-winner" data-aos="fade-left" data-aos-delay="200">
           <h3>Last Year's Winner</h3>
-          <img src="images/botb-winner.webp" alt="Battle of the Bands Winner">
+          <img src="images/botb-winner.jpg" alt="Battle of the Bands Winner">
           <p class="mt-2"><strong>The Rising Stars</strong></p>
         </div>
       </div>
