--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BYX Island Party 2023</title>
+  <title>BYX Island Party 2025</title>
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -58,7 +58,7 @@
   <header class="hero-section">
     <div class="overlay"></div>
     <div class="hero-content text-center">
-      <h1>BYX Island Party 2023</h1>
+      <h1>BYX Island Party 2025</h1>
       <p>Join us for a night of music, fun, and community!</p>
       <a href="#" class="btn btn-primary m-2">Buy Tickets</a>
       <a href="#fundraising" class="btn btn-secondary m-2">Donate Now</a>
@@ -91,7 +91,7 @@
   <!-- Lineup Section -->
   <section id="lineup" class="section-padding bg-light">
     <div class="container">
-      <h2 class="section-title">2023 Lineup</h2>
+      <h2 class="section-title">2025 Lineup</h2>
       <p class="section-subtitle">Get ready for an amazing lineup of artists!</p>
       <div class="row">
         <!-- Artist Card -->
@@ -113,8 +113,8 @@
         <!-- Artist Card -->
         <div class="col-md-4">
           <div class="artist-card">
-            <img src="images/artist3.jpg" alt="Opening Act">
-            <h4>Opening Act</h4>
+            <img src="images/artist3.jpg" alt="Kanye West">
+            <h4>Kanye West</h4>
             <p>A brief description of the opening act.</p>
           </div>
         </div>
@@ -179,15 +179,15 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Event Details</h3>
-          <p><i class="fa fa-calendar-alt"></i> Date: <strong>March 15, 2023</strong></p>
-          <p><i class="fa fa-map-marker-alt"></i> Location: <strong>Downtown Venue</strong></p>
+          <p><i class="fa fa-calendar-alt"></i> Date: <strong>March 15, 2025</strong></p>
+          <p><i class="fa fa-map-marker-alt"></i> Location: <strong>Gabbard Park</strong></p>
           <p><i class="fa fa-clock"></i> Time: <strong>6:00 PM - 10:00 PM</strong></p>
           <a href="#" class="btn btn-secondary">Learn More</a>
         </div>
         <div class="col-md-6">
           <h3>Last Year's Winner</h3>
           <img src="images/botb-winner.jpg" alt="Battle of the Bands Winner" class="img-fluid">
-          <p class="mt-2"><strong>The Rising Stars</strong></p>
+          <p class="mt-2"><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequatur, quo maxime totam similique ipsa voluptatum voluptas omnis? Magnam eaque iste amet itaque deleniti iusto in sapiente maiores blanditiis doloremque!</strong></p>
         </div>
       </div>
     </div>
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="text-center mt-4">
-        <p>&copy; 2023 BYX Island Party. All rights reserved.</p>
+        <p>&copy; 2024 BYX Island Party. All rights reserved.</p>
       </div>
     </div>
   </footer>
