Fixed video and artist carousel

--- a/index.html
+++ b/index.html
@@ -228,6 +228,15 @@
               </div>
             </div>
           </div>
+          <!-- Slide 4 -->
+          <div class="swiper-slide">
+            <div class="relative group">
+              <img src="images/gallery4.jpg" alt="Gallery Image 3" class="rounded-lg shadow-lg w-full h-64 object-cover" />
+              <div class="absolute inset-0 bg-teal-900 bg-opacity-50 opacity-0 group-hover:opacity-100 flex items-center justify-center transition-opacity">
+                <a href="images/gallery4.jpg" class="text-white text-xl font-semibold" target="_blank">View Image</a>
+              </div>
+            </div>
+          </div>
           <!-- Add more slides as needed -->
         </div>
         <!-- Swiper Pagination -->
@@ -241,21 +250,29 @@
 
 
   <!-- Video Section -->
-  <section id="video" class="py-20 bg-teal-900">
-    <div class="container mx-auto px-6 text-white">
-      <h2 class="section-title text-white">IP 2024</h2>
-      <p class="section-subtitle text-teal-200">The BYX Island Party Experience.</p>
-      <div class="mt-10 flex justify-center">
-        <!-- Placeholder for Video -->
-        <div class="w-full md:w-3/4">
-          <div class="aspect-w-16 aspect-h-9">
-            <iframe src="https://www.youtube.com/embed/QaqrOoBvMtA?si=x94HvovbC78zm6kb&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="rounded-lg shadow-lg"></iframe>
-            <!-- <iframe src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen class="rounded-lg shadow-lg"></iframe> -->
-          </div>
+<section id="video" class="py-20 bg-teal-900">
+  <div class="container mx-auto px-6 text-white">
+    <h2 class="section-title text-white">IP 2024</h2>
+    <p class="section-subtitle text-teal-200">The BYX Island Party Experience.</p>
+    <div class="mt-10 flex justify-center">
+      <!-- Placeholder for Video -->
+      <div class="w-full md:w-3/4">
+        <div class="aspect-video">
+          <iframe
+            src="https://www.youtube.com/embed/QaqrOoBvMtA?controls=0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+            class="rounded-lg shadow-lg w-full h-full"
+          ></iframe>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
 
   <!-- Contact Section -->
   <section id="contact" class="py-20 bg-white">
